feat: implement update user avatar with link image
